# pdf_rag

./: .editorconfig  .gitignore  main.py  pyproject.toml
raw_data/insurance_dataset/: agents.csv
raw_data/insurance_dataset_10pct/: agents.csv  claims.csv  customers.csv  payments.csv
scripts/: format.sh  restart_oracle.sh  start_oracle.sh  start_qdrant.sh  status_oracle.sh  stop_oracle.sh  stop_qdrant.sh  table_ddl.sql
src/api/: __init__.py  app.py  auth.py  ingest.py  llm.py
src/app/: __init__.py  main.py
src/data/: __init__.py  pdf_document_reader.py
src/embedding/: __init__.py  main.py
src/jwt/: __init__.py  main.py
src/llm/: __init__.py  gpt_41_mini.py  gpt_5_mini.py  qwen3.py
src/logger/: __init__.py  main.py
src/pipeline/: __init__.py  config.py  ingest.py
src/pipeline/app/: __init__.py  main.py
src/pipeline/embedding/: __init__.py  main.py
src/pipeline/identifier/: __init__.py  main.py
src/pipeline/loader/: __init__.py  csv_document_loader.py  pdf_document_reader.py
src/pipeline/splitter/: __init__.py  main.py
src/pipeline/store/: __init__.py  main.py
src/rag/graph/: __init__.py  main.py
src/rag/intent/: __init__.py  classifier.py
src/rag/model/: __init__.py  chat_request.py  chat_response.py
src/rag/node/: __init__.py  gate.py  intent_node.py  reject_node.py  router_node.py
src/rag/state/: __init__.py  main.py
src/store/: __init__.py  main.py
tests/: test_intent.py
